fix interface window alignment

--- a/latest/sass/components/birthdays.scss
+++ b/latest/sass/components/birthdays.scss
@@ -2,7 +2,7 @@
     position: relative;
     height: 100%;
     .btn-toggle-form {
-        margin: 12px 0px;
+        margin: 12px;
         cursor: pointer;
         display: inline-flex;
         border: 1px solid #ccc;
@@ -28,7 +28,6 @@
         position: absolute;
         height: 100%;
         width: 100%;
-        margin-right: 12px;
         margin-left: 0;
         opacity: 0;
         pointer-events: none;
