--- a/latest/sass/components/timers/_timerList.scss
+++ b/latest/sass/components/timers/_timerList.scss
@@ -1,17 +1,14 @@
 .interface-modal.timers {
   position: relative;
-  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   color: var(--color);
   font-family: 'Quicksand';
-  margin-top: 100px;
-  margin-bottom: 40px;
   border: 1px solid var(--border-1);
-  padding: 20px;
   border-radius: 20px;
   overflow: hidden;
+  padding: 20px;
   .interface-tab {
     display: none;
     margin-top: 12px;
