--- a/latest/sass/main.scss
+++ b/latest/sass/main.scss
@@ -1,8 +1,10 @@
 @use './colors.scss';
 @use './shadows.scss';
+
 @forward './dims.scss';
 @forward './reset.scss';
 
+@forward './components/tabs/tabber.scss';
 @forward './components/birthdays.scss';
 @forward './components/calendar/calendar.scss';
 @forward './components/timers/timers.scss';
@@ -12,6 +14,7 @@ html {
 }
 
 body {
+  position: relative;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -20,8 +23,8 @@ body {
 
 #root {
   box-sizing: border-box;
-  height: calc(100% - 16px);
-  width: calc(100% - 16px);
+  height: calc(100vh - 16px);
+  width: calc(100vw - 16px);
   border-radius: 8px;
   display: flex;
   position: relative;
@@ -30,13 +33,14 @@ body {
 }
 
 .app {
+  position: relative;
   font-family: 'Quicksand', Arial, Helvetica, sans-serif;;
   display: flex;
   justify-content: flex-start;
   padding-top: 24px;
-  padding-left: 24px;
-
+  flex: 1;
 }
+
 .navbar {
   display: flex;
   border: 1px solid #ccc;
@@ -53,60 +57,3 @@ body {
 
 }
 
-.interface-modal {
-    width: 100%;
-    margin-top: 100px;
-    margin-bottom: 40px;
-    display: flex;
-    flex-direction: column;
-    color: var(--color);
-    border: 1px solid var(--border-1);
-    padding: 20px;
-    border-radius: 20px;
-    overflow: hidden;
-
-    .interface-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px;
-      font-weight: 600;
-    }
-    .interface-title {
-      font-size: 20px;
-      opacity: .8;
-      letter-spacing: 0.035em;
-    }
-    .btn-close {
-      display: flex;
-      align-items: center;
-      height: 20px;
-      cursor: pointer;
-      opacity: .8;
-      .icon,
-      .label {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      .label {
-        margin-right: 4px;
-      }
-      .icon {
-        padding-top: 2px;
-      }
-    }
-}
-
-.tabber-modals {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  position: relative;
-  padding-right: 12px;
-  .tabber-tab {
-    &.active {
-      border-bottom: 1px solid #ddd;
-    }
-  }
-}  
